fdnonpar version 0.14.1 rank envelope now using max for ties in original data rank count test is no longer an envelope test (with plot and p-interval), print.envtest checks p-interval

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+  CHANGES IN fdnonpar VERSION 0.14.1
+  
+    o rankEnvelope: for ties in original data use max (was min)
+    
+
   CHANGES IN fdnonpar VERSION 0.14.0
 
     o new function rankCount.test
