fdnonpar version 0.14.2-1  -  rankEnv.test now includes the observation in the envelope by default

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+  CHANGES IN fdnonpar VERSION 0.14.2-1
+   
+    o rankEnv.test now includes the observation in the envelope by default
+    
   CHANGES IN fdnonpar VERSION 0.14.2
    
     o new function restrict.fdsample to restrict argument range
@@ -5,7 +9,6 @@
   CHANGES IN fdnonpar VERSION 0.14.1
   
     o rankEnvelope: for ties in original data use max (was min)
-    
 
   CHANGES IN fdnonpar VERSION 0.14.0
 
